lib/albedo_dart_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/albedo_dart.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class AlbedoDartBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AlbedoDartBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AlbedoDartBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Open a database
  int albedo_open(ffi.Pointer<ffi.Char> path, ffi.Pointer<AlbedoBucket> out) {
    return _albedo_open(path, out);
  }

  late final _albedo_openPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<AlbedoBucket>)
    >
  >('albedo_open');
  late final _albedo_open =
      _albedo_openPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<AlbedoBucket>)
          >();

  int albedo_open_with_options(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint8> optionsBuffer,
    ffi.Pointer<AlbedoBucket> out,
  ) {
    return _albedo_open_with_options(path, optionsBuffer, out);
  }

  late final _albedo_open_with_optionsPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Uint8>,
        ffi.Pointer<AlbedoBucket>,
      )
    >
  >('albedo_open_with_options');
  late final _albedo_open_with_options =
      _albedo_open_with_optionsPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<AlbedoBucket>,
            )
          >();

  /// Close a database
  int albedo_close(AlbedoBucket bucket) {
    return _albedo_close(bucket);
  }

  late final _albedo_closePtr =
      _lookup<ffi.NativeFunction<AlbedoResult Function(AlbedoBucket)>>(
        'albedo_close',
      );
  late final _albedo_close =
      _albedo_closePtr.asFunction<int Function(AlbedoBucket)>();

  /// Insert a document
  int albedo_insert(AlbedoBucket bucket, ffi.Pointer<ffi.Uint8> docBuffer) {
    return _albedo_insert(bucket, docBuffer);
  }

  late final _albedo_insertPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(AlbedoBucket, ffi.Pointer<ffi.Uint8>)
    >
  >('albedo_insert');
  late final _albedo_insert =
      _albedo_insertPtr
          .asFunction<int Function(AlbedoBucket, ffi.Pointer<ffi.Uint8>)>();

  /// Ensure index exists
  int albedo_ensure_index(
    AlbedoBucket bucket,
    ffi.Pointer<ffi.Char> path,
    int options_byte,
  ) {
    return _albedo_ensure_index(bucket, path, options_byte);
  }

  late final _albedo_ensure_indexPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(AlbedoBucket, ffi.Pointer<ffi.Char>, ffi.Uint8)
    >
  >('albedo_ensure_index');
  late final _albedo_ensure_index =
      _albedo_ensure_indexPtr
          .asFunction<int Function(AlbedoBucket, ffi.Pointer<ffi.Char>, int)>();

  /// Drop an index
  int albedo_drop_index(AlbedoBucket bucket, ffi.Pointer<ffi.Char> path) {
    return _albedo_drop_index(bucket, path);
  }

  late final _albedo_drop_indexPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(AlbedoBucket, ffi.Pointer<ffi.Char>)
    >
  >('albedo_drop_index');
  late final _albedo_drop_index =
      _albedo_drop_indexPtr
          .asFunction<int Function(AlbedoBucket, ffi.Pointer<ffi.Char>)>();

  /// Delete documents matching a query
  int albedo_delete(
    AlbedoBucket bucket,
    ffi.Pointer<ffi.Uint8> queryBuffer,
    int queryLen,
  ) {
    return _albedo_delete(bucket, queryBuffer, queryLen);
  }

  late final _albedo_deletePtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(AlbedoBucket, ffi.Pointer<ffi.Uint8>, ffi.Uint16)
    >
  >('albedo_delete');
  late final _albedo_delete =
      _albedo_deletePtr
          .asFunction<
            int Function(AlbedoBucket, ffi.Pointer<ffi.Uint8>, int)
          >();

  /// List documents matching a query
  int albedo_list(
    AlbedoBucket bucket,
    ffi.Pointer<ffi.Uint8> queryBuffer,
    ffi.Pointer<AlbedoListHandle> outIterator,
  ) {
    return _albedo_list(bucket, queryBuffer, outIterator);
  }

  late final _albedo_listPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        AlbedoBucket,
        ffi.Pointer<ffi.Uint8>,
        ffi.Pointer<AlbedoListHandle>,
      )
    >
  >('albedo_list');
  late final _albedo_list =
      _albedo_listPtr
          .asFunction<
            int Function(
              AlbedoBucket,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<AlbedoListHandle>,
            )
          >();

  int albedo_list_cursor_export(
    AlbedoListHandle handle,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> outCursor,
  ) {
    return _albedo_list_cursor_export(handle, outCursor);
  }

  late final _albedo_list_cursor_exportPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        AlbedoListHandle,
        ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
      )
    >
  >('albedo_list_cursor_export');
  late final _albedo_list_cursor_export =
      _albedo_list_cursor_exportPtr
          .asFunction<
            int Function(AlbedoListHandle, ffi.Pointer<ffi.Pointer<ffi.Uint8>>)
          >();

  /// Get the current document from the iterator
  int albedo_data(
    AlbedoListHandle handle,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> outDoc,
  ) {
    return _albedo_data(handle, outDoc);
  }

  late final _albedo_dataPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        AlbedoListHandle,
        ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
      )
    >
  >('albedo_data');
  late final _albedo_data =
      _albedo_dataPtr
          .asFunction<
            int Function(AlbedoListHandle, ffi.Pointer<ffi.Pointer<ffi.Uint8>>)
          >();

  /// Advance the iterator
  int albedo_next(AlbedoListHandle handle) {
    return _albedo_next(handle);
  }

  late final _albedo_nextPtr =
      _lookup<ffi.NativeFunction<AlbedoResult Function(AlbedoListHandle)>>(
        'albedo_next',
      );
  late final _albedo_next =
      _albedo_nextPtr.asFunction<int Function(AlbedoListHandle)>();

  /// Close the iterator and free resources
  int albedo_close_iterator(AlbedoListHandle iterator) {
    return _albedo_close_iterator(iterator);
  }

  late final _albedo_close_iteratorPtr =
      _lookup<ffi.NativeFunction<AlbedoResult Function(AlbedoListHandle)>>(
        'albedo_close_iterator',
      );
  late final _albedo_close_iterator =
      _albedo_close_iteratorPtr.asFunction<int Function(AlbedoListHandle)>();

  /// Vacuum the database
  int albedo_vacuum(AlbedoBucket bucket) {
    return _albedo_vacuum(bucket);
  }

  late final _albedo_vacuumPtr =
      _lookup<ffi.NativeFunction<AlbedoResult Function(AlbedoBucket)>>(
        'albedo_vacuum',
      );
  late final _albedo_vacuum =
      _albedo_vacuumPtr.asFunction<int Function(AlbedoBucket)>();

  /// Flush pending writes to disk
  int albedo_flush(AlbedoBucket bucket) {
    return _albedo_flush(bucket);
  }

  late final _albedo_flushPtr =
      _lookup<ffi.NativeFunction<AlbedoResult Function(AlbedoBucket)>>(
        'albedo_flush',
      );
  late final _albedo_flush =
      _albedo_flushPtr.asFunction<int Function(AlbedoBucket)>();

  /// Create a transform iterator
  int albedo_transform(
    AlbedoBucket bucket,
    ffi.Pointer<ffi.Uint8> queryBuffer,
    ffi.Pointer<AlbedoTransformIterator> iteratorOut,
  ) {
    return _albedo_transform(bucket, queryBuffer, iteratorOut);
  }

  late final _albedo_transformPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        AlbedoBucket,
        ffi.Pointer<ffi.Uint8>,
        ffi.Pointer<AlbedoTransformIterator>,
      )
    >
  >('albedo_transform');
  late final _albedo_transform =
      _albedo_transformPtr
          .asFunction<
            int Function(
              AlbedoBucket,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<AlbedoTransformIterator>,
            )
          >();

  /// Get the current document from the transform iterator
  int albedo_transform_data(
    AlbedoTransformIterator iterator,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> outDoc,
  ) {
    return _albedo_transform_data(iterator, outDoc);
  }

  late final _albedo_transform_dataPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        AlbedoTransformIterator,
        ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
      )
    >
  >('albedo_transform_data');
  late final _albedo_transform_data =
      _albedo_transform_dataPtr
          .asFunction<
            int Function(
              AlbedoTransformIterator,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            )
          >();

  /// Apply a transformation to the current document (nullable buffer to delete)
  int albedo_transform_apply(
    AlbedoTransformIterator iterator,
    ffi.Pointer<ffi.Uint8> transformBuffer,
  ) {
    return _albedo_transform_apply(iterator, transformBuffer);
  }

  late final _albedo_transform_applyPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(AlbedoTransformIterator, ffi.Pointer<ffi.Uint8>)
    >
  >('albedo_transform_apply');
  late final _albedo_transform_apply =
      _albedo_transform_applyPtr
          .asFunction<
            int Function(AlbedoTransformIterator, ffi.Pointer<ffi.Uint8>)
          >();

  /// Close the transform iterator
  int albedo_transform_close(AlbedoTransformIterator iterator) {
    return _albedo_transform_close(iterator);
  }

  late final _albedo_transform_closePtr = _lookup<
    ffi.NativeFunction<AlbedoResult Function(AlbedoTransformIterator)>
  >('albedo_transform_close');
  late final _albedo_transform_close =
      _albedo_transform_closePtr
          .asFunction<int Function(AlbedoTransformIterator)>();

  /// Set a callback for page replication
  int albedo_set_replication_callback(
    AlbedoBucket bucket,
    AlbedoPageChangeCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _albedo_set_replication_callback(bucket, callback, context);
  }

  late final _albedo_set_replication_callbackPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        AlbedoBucket,
        AlbedoPageChangeCallback,
        ffi.Pointer<ffi.Void>,
      )
    >
  >('albedo_set_replication_callback');
  late final _albedo_set_replication_callback =
      _albedo_set_replication_callbackPtr
          .asFunction<
            int Function(
              AlbedoBucket,
              AlbedoPageChangeCallback,
              ffi.Pointer<ffi.Void>,
            )
          >();

  /// Apply a replicated page batch
  int albedo_apply_batch(
    AlbedoBucket bucket,
    ffi.Pointer<ffi.Uint8> data,
    int data_size,
    int page_count,
  ) {
    return _albedo_apply_batch(bucket, data, data_size, page_count);
  }

  late final _albedo_apply_batchPtr = _lookup<
    ffi.NativeFunction<
      AlbedoResult Function(
        AlbedoBucket,
        ffi.Pointer<ffi.Uint8>,
        ffi.Uint32,
        ffi.Uint32,
      )
    >
  >('albedo_apply_batch');
  late final _albedo_apply_batch =
      _albedo_apply_batchPtr
          .asFunction<
            int Function(AlbedoBucket, ffi.Pointer<ffi.Uint8>, int, int)
          >();

  /// Get the platform bit size
  int albedo_bitsize() {
    return _albedo_bitsize();
  }

  late final _albedo_bitsizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('albedo_bitsize');
  late final _albedo_bitsize = _albedo_bitsizePtr.asFunction<int Function()>();

  /// Get the library version
  int albedo_version() {
    return _albedo_version();
  }

  late final _albedo_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('albedo_version');
  late final _albedo_version = _albedo_versionPtr.asFunction<int Function()>();

  /// Allocate and free memory using the library allocator
  ffi.Pointer<ffi.Uint8> albedo_malloc(int size) {
    return _albedo_malloc(size);
  }

  late final _albedo_mallocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Size)>>(
        'albedo_malloc',
      );
  late final _albedo_malloc =
      _albedo_mallocPtr.asFunction<ffi.Pointer<ffi.Uint8> Function(int)>();

  void albedo_free(ffi.Pointer<ffi.Uint8> ptr, int size) {
    return _albedo_free(ptr, size);
  }

  late final _albedo_freePtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>
  >('albedo_free');
  late final _albedo_free =
      _albedo_freePtr.asFunction<void Function(ffi.Pointer<ffi.Uint8>, int)>();
}

typedef AlbedoResult = ffi.Uint8;
typedef DartAlbedoResult = int;

/// Opaque pointer types as void pointers
typedef AlbedoBucket = ffi.Pointer<ffi.Void>;
typedef AlbedoListHandle = ffi.Pointer<ffi.Void>;
typedef AlbedoTransformIterator = ffi.Pointer<ffi.Void>;
typedef AlbedoPageChangeCallback =
    ffi.Pointer<ffi.NativeFunction<AlbedoPageChangeCallbackFunction>>;
typedef AlbedoPageChangeCallbackFunction =
    ffi.Uint8 Function(
      ffi.Pointer<ffi.Void> context,
      ffi.Pointer<ffi.Uint8> data,
      ffi.Uint32 data_size,
      ffi.Uint32 page_count,
    );
typedef DartAlbedoPageChangeCallbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> context,
      ffi.Pointer<ffi.Uint8> data,
      int data_size,
      int page_count,
    );

const int ALBEDO_OK = 0;

const int ALBEDO_ERROR = 1;

const int ALBEDO_HAS_DATA = 2;

const int ALBEDO_EOS = 3;

const int ALBEDO_OUT_OF_MEMORY = 4;

const int ALBEDO_FILE_NOT_FOUND = 5;

const int ALBEDO_NOT_FOUND = 6;

const int ALBEDO_INVALID_FORMAT = 7;

const int ALBEDO_DUPLICATE_KEY = 8;

const int ALBEDO_INVALID_CURSOR = 9;

const int ALBEDO_UNSUPPORTED_CURSOR_QUERY = 10;
